<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fontFamily="@font/roboto_bold"
        android:padding="24dp"
        android:text="@string/main_menu_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guidBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/gameTitle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/start_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="32dp"
        android:paddingTop="12dp"
        android:paddingRight="32dp"
        android:paddingBottom="12dp"
        android:text="@string/start_button"
        android:textSize="24sp"
        app:cornerRadius="1000dp"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidBox" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/create_button"
        android:textSize="24sp"
        app:cornerRadius="1000dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/start_button"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/score_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        android:text="@string/score_button"
        android:textSize="24sp"
        app:cornerRadius="1000dp"
        app:layout_constraintBottom_toTopOf="@+id/gameTitle3"
        app:layout_constraintEnd_toEndOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="@+id/createButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

</androidx.constraintlayout.widget.ConstraintLayout>